--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  background-color: #a8ad77;
-}
-
 @keyframes wave {
   0% {
     transform: rotate(0deg);
@@ -32,32 +28,44 @@
   }
 }
 
+.App {
+  background-color: #a8ad77;
+}
+
 .about-me-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto auto; /* Two rows: one for header, one for icons */
+  grid-template-columns: 1fr 1fr; /* Two columns for icons in the second row */
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center; /* Center align items in the grid */
 }
 
-.waving-hand-icon {
-  color: '#5f6219';
-  display: grid;
-  grid-template-columns: auto;
-  grid-row: 1;
-  font-size: smaller;
-}
-
-.waving-hand-icon :hover {
-  animation: wave 2s;
-  transform-origin: bottom center;
+.name-header {
+  grid-row: 1; /* Place in the first row */
+  grid-column: span 2; /* Span across both columns */
+  padding: 10px;
+  text-align: center; /* Center text horizontally */
+  font-size: 70px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .linkedIn-icon {
   color: '#5f6219';
-  display: grid;
-  grid-template-columns: auto;
-  grid-row: 1;
-  font-size: smaller;
+  font-size: medium;
+  padding: 10px;
+  animation: pulsate 3s; /* Animation on hover */
 }
 
-.linkedIn-icon :hover {
-  animation: pulsate 1s;
+.waving-hand-icon {
+  color: '#5f6219';
+  font-size: medium;
+  padding: 10px;
+  animation: wave 2s; /* Animation on hover */
+  transform-origin: bottom center; /* Set transform origin */
+}
+
+.MuiTouchRipple-root {
+  display: none !important;
 }
