--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,19 @@
   }
 }
 
-h2 {
+h1, h2 {
   border-radius: 30px;
   background-color: #d7dda2;
-  width: 1000px;
-  padding: 10%;
+  padding: 2%;
+  margin: 0 auto; /* Center the element */
+}
+
+h1 {
+  width: 50%;
+}
+
+h2 {
+  width: 50%;
 }
 
 .App {
@@ -41,12 +49,13 @@ h2 {
 
 .about-me-container {
   display: grid;
-  grid-template-rows: auto auto; /* Two rows: one for header, one for icons */
+  grid-template-rows: auto auto auto; /* Two rows: one for header, one for icons */
   grid-template-columns: 1fr; /* Single column to span the full width */
   width: 100%;
   height: 100%;
   justify-content: space-evenly;
   align-items: center; /* Center align items in the grid */
+  gap: 20px;
 }
 
 .button-highlight {
@@ -97,16 +106,15 @@ h2 {
 }
 
 .role-description {
+  grid-row: 2; 
   color: #642c1e;
   text-align: center;
   font-size: 30px;
-}
-
-.role-container {
-  width: 50%;
-  height: 50%;
-  padding: 10px;
+  width: 80%;
+  padding: 30px;
   margin: auto;
+  border-radius: 30px;
+  background-color: #d7dda2;
 }
 
 .waving-hand-icon {
