--- a/src/App.css
+++ b/src/App.css
@@ -37,21 +37,19 @@ h1, h2 {
 }
 
 /* Buttons */
-.button-highlight,
-.button-wave {
+.button-highlight {
   display: inline-flex;
   align-items: center;
   background-color: #d7dda2;
   border-radius: 30px;
-  font-family: 'Brandon Grotesque';
+  font-family: 'Brandon Grotesque' !important;
   padding: 10px 20px;
   border: none;
   cursor: pointer;
   transition: border-color 0.1s ease, border-width 0.1s ease;
 }
 
-.button-highlight:hover,
-.button-wave:hover {
+.button-highlight:hover {
   border-color: #642c1e;
   border-width: 3px;
   border-style: solid;
@@ -78,8 +76,10 @@ h1, h2 {
 }
 
 /* MUI overrides */
-.MuiTouchRipple-root {
+.MuiTouchRipple-root,
+.MuiButton-colorPrimary {
   display: none !important;
+  color: #642c1e !important;
 }
 
 .MuiButtonBase-root {
