--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ h1, h2 {
 
 .about-me-container {
   display: grid;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: auto auto auto auto;
   grid-template-columns: 1fr;
   width: 100%;
   height: 100%;
@@ -44,9 +44,9 @@ h1, h2 {
   border-radius: 30px;
   font-family: 'Brandon Grotesque' !important;
   padding: 10px 20px;
-  border: none;
+  border: 2px solid transparent;
   cursor: pointer;
-  transition: border-color 0.1s ease, border-width 0.1s ease;
+  transition: border-color 0.1s ease;
 }
 
 .button-highlight:hover {
@@ -63,19 +63,31 @@ h1, h2 {
   animation: pulsate 3s infinite;
 }
 
-/* Icon container */
-.icon-container {
+.donation-container {
+  grid-row: 4; 
   display: flex;
-  gap: 10px;
+  justify-content: center;
 }
 
-.linkedIn-icon,
-.waving-hand-icon {
+.donation-icon {
   font-size: medium;
   padding: 10px;
 }
 
-/* MUI overrides */
+.icon-container {
+  grid-row: 3; 
+  display: flex;
+  gap: 10px;
+  justify-content: center; 
+}
+
+.linkedIn-icon,
+.waving-hand-icon,
+.donation-icon {
+  font-size: medium;
+  padding: 10px;
+}
+
 .MuiTouchRipple-root,
 .MuiButton-colorPrimary {
   display: none !important;
@@ -89,7 +101,6 @@ h1, h2 {
   width: 50% !important;
 }
 
-/* Headers */
 .name-header {
   font-family: 'Palatino Linotype';
   grid-row: 1;
